--- a/buildout.cfg
+++ b/buildout.cfg
@@ -17,6 +17,9 @@ parts =
     robot
 develop = .
 
+sources-dir = extras
+auto-checkout = *
+always-checkout = force
 
 [instance]
 recipe = plone.recipe.zope2instance
@@ -27,6 +30,7 @@ environment-vars =
 eggs =
     Plone
     Pillow
+    iw.debug
     redturtle.exporter.base [test]
 
 
@@ -147,3 +151,6 @@ watchdog = 0.8.3
 z3c.jbot = 0.7.2
 zc.recipe.egg = 2.0.3
 zest.releaser = 6.9
+
+[sources]
+ploneorg.jsonify = git https://github.com/collective/ploneorg.jsonify.git
