--- a/test_plone52.cfg
+++ b/test_plone52.cfg
@@ -9,3 +9,26 @@ update-versions-file = test_plone52.cfg
 
 [versions]
 plone.testing = 7.0.1
+
+# Added by buildout at 2019-12-11 15:19:44.056471
+PyYAML = 5.1.2
+argh = 0.26.2
+createcoverage = 1.5
+mccabe = 0.6.1
+pathtools = 0.1.2
+plone.recipe.codeanalysis = 3.0.1
+prompt-toolkit = 1.0.16
+pyflakes = 1.5.0
+watchdog = 0.9.0
+
+# Required by:
+# plone.recipe.codeanalysis==3.0.1
+check-manifest = 0.40
+
+# Required by:
+# flake8==3.3.0
+configparser = 3.7.4
+
+# Required by:
+# prompt-toolkit==1.0.16
+wcwidth = 0.1.7
