--- a/test_plone51.cfg
+++ b/test_plone51.cfg
@@ -9,3 +9,29 @@ update-versions-file = test_plone51.cfg
 
 [versions]
 plone.testing = 5.0.0
+
+# Added by buildout at 2019-12-11 15:48:34.175213
+PyYAML = 5.1.2
+argh = 0.26.2
+chardet = 3.0.4
+createcoverage = 1.5
+idna = 2.8
+mccabe = 0.6.1
+pathtools = 0.1.2
+pkginfo = 1.5.0.1
+plone.recipe.codeanalysis = 3.0.1
+pyflakes = 1.5.0
+requests-toolbelt = 0.9.1
+watchdog = 0.9.0
+
+# Required by:
+# plone.recipe.codeanalysis==3.0.1
+check-manifest = 0.40
+
+# Required by:
+# zest.releaser==6.17.2
+colorama = 0.4.1
+
+# Required by:
+# flake8==3.3.0
+configparser = 3.7.4
