--- a/test_plone43.cfg
+++ b/test_plone43.cfg
@@ -23,6 +23,7 @@ plone.app.robotframework = 1.2.1
 configparser = 3.5.3
 plone.testing = 5.0.0
 jsonschema = 2.6.0
+lxml = 4.4.1
 pyflakes = 2.1.1
 ###
 
