--- a/test_plone52.cfg
+++ b/test_plone52.cfg
@@ -9,6 +9,8 @@ update-versions-file = test_plone52.cfg
 
 [versions]
 plone.testing = 7.0.1
+lxml = 4.4.1
+pyflakes = 2.1.1
 
 # Added by buildout at 2019-12-11 15:19:44.056471
 PyYAML = 5.1.2
