--- a/test_plone51.cfg
+++ b/test_plone51.cfg
@@ -9,6 +9,8 @@ update-versions-file = test_plone51.cfg
 
 [versions]
 plone.testing = 5.0.0
+lxml = 4.4.1
+pyflakes = 2.1.1
 
 # Added by buildout at 2019-12-11 15:48:34.175213
 PyYAML = 5.1.2
@@ -20,7 +22,6 @@ mccabe = 0.6.1
 pathtools = 0.1.2
 pkginfo = 1.5.0.1
 plone.recipe.codeanalysis = 3.0.1
-pyflakes = 2.1.1
 requests-toolbelt = 0.9.1
 watchdog = 0.9.0
 
