--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ matrix:
       env: PLONE_VERSION=43
     - python: "2.7"
       env: PLONE_VERSION=51
-    - python: "2.7"
-      env: PLONE_VERSION=52
+    # - python: "2.7"
+    #   env: PLONE_VERSION=52
     # - python: "3.7"
     #   env: PLONE_VERSION=52
   sudo: true
