--- a/test_plone51.cfg
+++ b/test_plone51.cfg
@@ -10,7 +10,6 @@ update-versions-file = test_plone51.cfg
 [versions]
 plone.testing = 5.0.0
 lxml = 4.4.1
-pyflakes = 2.1.1
 
 # Added by buildout at 2019-12-11 15:48:34.175213
 PyYAML = 5.1.2
@@ -36,3 +35,9 @@ colorama = 0.4.1
 # Required by:
 # flake8==3.3.0
 configparser = 3.7.4
+
+# Added by buildout at 2019-12-11 17:12:41.588528
+flake8-coding = 1.3.2
+flake8-debugger = 3.2.0
+flake8-print = 3.1.1
+pyflakes = 1.5.0
