fix tests for plone 43

--- a/test_plone43.cfg
+++ b/test_plone43.cfg
@@ -10,7 +10,7 @@ update-versions-file = test_plone43.cfg
 [versions]
 zc.buildout = 2.5.3
 setuptools = 27.3.0
-# Pillow = 5.1.0
+Pillow = 5.1.0
 
 # manual pinnings
 plone.recipe.codeanalysis = 3.0.1
@@ -24,6 +24,37 @@ configparser = 3.5.3
 plone.testing = 5.0.0
 jsonschema = 2.6.0
 lxml = 4.4.1
+Products.Archetypes = 1.9.10
 ###
 
 
+
+# Added by buildout at 2019-12-11 17:36:13.348368
+PyYAML = 5.1.2
+argh = 0.26.2
+createcoverage = 1.5
+flake8-coding = 1.3.2
+flake8-debugger = 3.2.0
+flake8-print = 3.1.1
+mccabe = 0.6.1
+pathtools = 0.1.2
+pkginfo = 1.5.0.1
+plone.app.dexterity = 2.0.19
+pyflakes = 1.5.0
+watchdog = 0.9.0
+
+# Required by:
+# plone.recipe.codeanalysis==3.0.1
+check-manifest = 0.40
+
+# Required by:
+# zest.releaser==6.13.5
+colorama = 0.4.1
+
+# Required by:
+# flake8==3.3.0
+enum34 = 1.1.6
+
+# Required by:
+# check-manifest==0.40
+toml = 0.10.0
