fixes pre-release

--- a/test_plone43.cfg
+++ b/test_plone43.cfg
@@ -11,36 +11,21 @@ update-versions-file = test_plone43.cfg
 zc.buildout = 2.5.3
 setuptools = 27.3.0
 Pillow = 5.1.0
-pyflakes = 2.1.1
-
-# manual pinnings
-plone.recipe.codeanalysis = 3.0.1
-backports.functools_lru_cache = 1.5
-isort = 4.3.21
-# 2.1.1 is the last supported version for Plone 4.3, but plone.app.contenttypes 1.1.6 is requirering <2.1.0:
-plone.app.dexterity = <2.1.0
-docutils = 0.14
-plone.app.robotframework = 1.2.1
-configparser = 3.5.3
+pyflakes = 1.5.0
+flake8 = 3.3.0
 plone.testing = 5.0.0
-jsonschema = 2.6.0
-lxml = 4.4.1
-Products.Archetypes = 1.9.10
-###
 
-
-
-# Added by buildout at 2019-12-11 17:36:13.348368
-PyYAML = 5.1.2
+# Added by buildout at 2020-02-05 15:54:59.095213
+PyYAML = 5.3
 argh = 0.26.2
 createcoverage = 1.5
 flake8-coding = 1.3.2
-flake8-debugger = 3.2.0
-flake8-print = 3.1.1
+flake8-debugger = 3.2.1
+flake8-print = 3.1.4
 mccabe = 0.6.1
 pathtools = 0.1.2
 pkginfo = 1.5.0.1
-plone.app.dexterity = 2.0.19
+plone.recipe.codeanalysis = 3.0.1
 watchdog = 0.9.0
 
 # Required by:
@@ -50,6 +35,10 @@ check-manifest = 0.40
 # Required by:
 # zest.releaser==6.13.5
 colorama = 0.4.1
+
+# Required by:
+# flake8==3.3.0
+configparser = 3.7.4
 
 # Required by:
 # flake8==3.3.0
