--- a/test_plone43.cfg
+++ b/test_plone43.cfg
@@ -7,6 +7,9 @@ extends =
 
 update-versions-file = test_plone43.cfg
 
+parts -=
+    code-analysis
+
 [versions]
 zc.buildout = 2.5.3
 setuptools = 27.3.0
