--- a/test_plone43.cfg
+++ b/test_plone43.cfg
@@ -50,3 +50,6 @@ enum34 = 1.1.6
 # Required by:
 # check-manifest==0.40
 toml = 0.10.0
+
+# Added by buildout at 2020-02-18 17:38:28.107711
+collective.recipe.plonesite = 1.11.0
