--- a/test_plone43.cfg
+++ b/test_plone43.cfg
@@ -13,10 +13,13 @@ parts -=
 [versions]
 zc.buildout = 2.5.3
 setuptools = 27.3.0
-Pillow = 5.1.0
-pyflakes = 1.5.0
+configparser = <5.0.0 # configparser only needed for Py<3.
 flake8 = 3.3.0
+Pillow = 5.1.0
 plone.testing = 5.0.0
+pycodestyle = 2.0.0
+pyflakes = 1.5.0
+
 
 # Added by buildout at 2020-02-05 15:54:59.095213
 PyYAML = 5.3
