--- a/test_plone51.cfg
+++ b/test_plone51.cfg
@@ -12,3 +12,6 @@ plone.testing = 5.0.0
 lxml = 4.4.1
 pyflakes = 1.5.0
 flake8 = 3.3.0
+pycodestyle = 2.0.0
+pyflakes = 1.5.0
+configparser = <5.0.0 # configparser only needed for Py<3.
