--- a/test_plone43.cfg
+++ b/test_plone43.cfg
@@ -10,7 +10,7 @@ update-versions-file = test_plone43.cfg
 [versions]
 zc.buildout = 2.5.3
 setuptools = 27.3.0
-configparser = <5.0.0 # configparser only needed for Py<3.
+configparser = 3.7.4
 flake8 = 3.3.0
 Pillow = 5.1.0
 plone.testing = 5.0.0
