--- a/test_plone51.cfg
+++ b/test_plone51.cfg
@@ -14,4 +14,4 @@ pyflakes = 1.5.0
 flake8 = 3.3.0
 pycodestyle = 2.0.0
 pyflakes = 1.5.0
-configparser = <5.0.0 # configparser only needed for Py<3.
+configparser = 3.7.4
