--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,11 +8,13 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python: ["2.7"]
-        plone: ["43", "51"]
-        # exclude:
-        #   - python: '3.7'
-        #     plone: '51'
+        python: ["2.7", "3.7"]
+        plone: ["43", "51", "52"]
+        exclude:
+          - python: "3.7"
+            plone: ["51", "43"]
+          - python: "2.7"
+            plone: ["52"]
     steps:
       - uses: actions/checkout@v1
       - name: Cache eggs
