--- a/test_plone52.cfg
+++ b/test_plone52.cfg
@@ -32,3 +32,15 @@ configparser = 3.7.4
 # Required by:
 # prompt-toolkit==1.0.16
 wcwidth = 0.1.7
+
+# Added by buildout at 2021-01-29 17:05:28.953561
+flake8 = 3.8.4
+flake8-coding = 1.3.2
+flake8-debugger = 3.2.1
+flake8-print = 3.1.4
+pyflakes = 2.2.0
+
+# Required by:
+# flake8-debugger==3.2.1
+# flake8-print==3.1.4
+pycodestyle = 2.6.0
