--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,9 +12,11 @@ jobs:
         plone: ["43", "51", "52"]
         exclude:
           - python: "3.7"
-            plone: ["51", "43"]
+            plone: "43"
+          - python: "3.7"
+            plone: "51"
           - python: "2.7"
-            plone: ["52"]
+            plone: "52"
     steps:
       - uses: actions/checkout@v1
       - name: Cache eggs
