--- a/test_plone52.cfg
+++ b/test_plone52.cfg
@@ -20,6 +20,7 @@ pathtools = 0.1.2
 plone.recipe.codeanalysis = 3.0.1
 prompt-toolkit = 1.0.16
 watchdog = 0.9.0
+importlib-metadata = 1
 
 # Required by:
 # plone.recipe.codeanalysis==3.0.1
